# first-opencv-prj

./: CMakeLists.txt  README.md
src/: main.cpp
